fix main page not aligned

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
-main{
+main {
   display: flex;
   justify-content: center;
   margin: auto;
-  width: 60%;
-  margin-top: 10%;
+  align-content: center;
+  margin-top: 20%;
 }
 
-app-header{
+app-header {
   width: 100%;
   background-color: white;
 }
